--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 group 'host.hashtreesig'
@@ -17,6 +18,11 @@ dependencies {
 
 application {
     mainClass = 'Main'
+}
+
+javafx {
+    version = "17"
+    modules = [ 'javafx.controls', "javafx.fxml" ]
 }
 
 test {
