--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,6 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+###Custom
+
+doc/
