--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ dependencies {
     implementation 'org.json:json:20210307'
     implementation 'com.nimbusds:nimbus-jose-jwt:9.15.2'
     implementation 'org.jetbrains:annotations:22.0.0'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
 }
