--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.beryx.jlink' version '2.24.4'
 }
 
 group 'host.hashtreesig'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 repositories {
     mavenCentral()
@@ -16,14 +17,11 @@ dependencies {
     implementation 'com.nimbusds:nimbus-jose-jwt:9.15.2'
     implementation 'org.jetbrains:annotations:22.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
 }
 
 application {
-    mainClass = 'Main'
+    mainModule = "hashtreesig.main"
+    mainClass = 'application.Main'
 }
 
 javafx {
@@ -31,6 +29,9 @@ javafx {
     modules = [ 'javafx.controls', "javafx.fxml" ]
 }
 
-test {
-    useJUnitPlatform()
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'hashtreesig'
+    }
 }
